--- a/visas/templates/visas/index.html
+++ b/visas/templates/visas/index.html
@@ -19,7 +19,7 @@ Select icons provided by:
     <title>ENTREVISTA: Client Intake</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="{% static 'visas/style.css' %}" type="text/css" rel="stylesheet">
@@ -27,7 +27,7 @@ Select icons provided by:
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../assets/js/ie-emulation-modes-warning.js"></script>
+    <!-- <script src="../assets/js/ie-emulation-modes-warning.js"></script> -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -47,13 +47,13 @@ Select icons provided by:
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ENTREVISTA</a>
+          <a class="navbar-brand" href="/visas/">ENTREVISTA</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li> -->
             <li><a href="#about" data-toggle="modal" data-target="#modalAbout"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> About / Información</a></li>
-            <li><a href="#logout" onClick="window.location.reload()"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out / Salir</a></li>
+            <li><a href="/visas/logout/" onClick="window.location.reload()"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out / Salir</a></li>
             <li><a href="#emergency" id="emergency" data-toggle="modal" data-target="#modalEmergency"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Emergency / Emergencia</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -101,7 +101,7 @@ Select icons provided by:
           <input type="text" style="display:none" required> <!-- awful hacky fix so Bootstrap can never try to submit a completed form -->
           <p></p>
           <p>
-            <button  class="btn btn-lg btn-primary" id="login"  onclick="beginInterview('English')">Log In</button>
+            <button  class="btn btn-lg btn-primary" id="login" onclick="beginInterview('English')">Log In</button>
             <button class="btn btn-lg btn-warning" onclick="beginInterview('Spanish')">Iniciar Sesión</button>
           </p>
         </form>
@@ -184,24 +184,23 @@ Select icons provided by:
 
     <!-- Recording scripts, credit to http://subinsb.com/html5-record-mic-voice -->
     <script src="http://lab.subinsb.com/projects/jquery/core/jquery-2.1.1.js"></script>
-    <script src="cdn/recorder.js"></script>
-    <script src="cdn/jquery.voice.js"></script>
-    <script src="cdn/record.js"></script>
+    <script src="{% static "visas/recorder.js" %}"></script>
+    <script src="{% static "visas/jquery.voice.js" %}"></script>
+    <script src="{% static "visas/record.js" %}"></script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>   -->
 <!-- conflicting with jquery 2 call earlier -->
-    <script src="../dist/js/bootstrap.min.js"></script>
+<!--    <script src="../dist/js/bootstrap.min.js"></script> -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
+<!--    <script src="../assets/js/ie10-viewport-bug-workaround.js"></script> -->
 
-    <script type="text/javascript" src="videoData.js"></script>
-    <script type="text/javascript" src="questionTree.js"></script>
-    <script type="text/javascript" src="interview.js"></script>
-<script src="{% static "visas/interview.js" %}" type="text/javascript"></script>
+    <script type="text/javascript" src="{% static "visas/videoData.js" %}"></script>
+    <script type="text/javascript" src="{% static "visas/questionTree.js" %}"></script>
+    <script src="{% static "visas/interview.js" %}" type="text/javascript"></script>
 
   </body>
 </html>
