spanish login button should also work
if this breaks everything; revert

--- a/visas/templates/visas/index.html
+++ b/visas/templates/visas/index.html
@@ -102,7 +102,7 @@ Select icons provided by:
           <p></p>
           <p>
             <button class="btn btn-lg btn-primary" id="login" onclick="beginInterview('English')">Log In</button>
-            <button class="btn btn-lg btn-warning" onclick="beginInterview('Spanish')">Iniciar Sesión</button>
+            <button class="btn btn-lg btn-warning" id="login-es" onclick="beginInterview('Spanish')">Iniciar Sesión</button>
             
           </p>
         </form>
