Changed paths for js files

--- a/visas/templates/visas/index.html
+++ b/visas/templates/visas/index.html
@@ -185,9 +185,9 @@ Select icons provided by:
 
     <!-- Recording scripts, credit to http://subinsb.com/html5-record-mic-voice -->
     <script src="http://lab.subinsb.com/projects/jquery/core/jquery-2.1.1.js"></script>
-    <script src="{% static "visas/recorder.js" %}"></script>
-    <script src="{% static "visas/jquery.voice.js" %}"></script>
-    <script src="{% static "visas/record.js" %}"></script>
+    <script src="{% static "visas/cdn/recorder.js" %}"></script>
+    <script src="{% static "visas/cdn/jquery.voice.js" %}"></script>
+    <script src="{% static "visas/cdn/record.js" %}"></script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
