--- a/visas/templates/visas/lookup.html
+++ b/visas/templates/visas/lookup.html
@@ -4,7 +4,7 @@ Select icons provided by:
 + Glyphicons, http://glyphicons.com/
 + TukTuk Design, from The Noun Project
 -->
-
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,18 +15,18 @@ Select icons provided by:
     <meta name="author" content="">
     <link rel="icon" href="../favicon.ico">
 
-    <title>ENTREVISTA: Answer Lookup</title>
+    <title>ENTREVISTA: Client Intake</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- <link href="../dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="{% static 'visas/style.css' %}" type="text/css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../assets/js/ie-emulation-modes-warning.js"></script>
+    <!-- <script src="../assets/js/ie-emulation-modes-warning.js"></script> -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -46,10 +46,14 @@ Select icons provided by:
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ENTREVISTA</a>
+          <a class="navbar-brand" href="/visas/">ENTREVISTA</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            <!-- <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li> -->
+            <li><a href="#about" data-toggle="modal" data-target="#modalAbout"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> About / Información</a></li>
+            <li><a href="/visas/logout/" onClick="window.location.reload()"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> Log Out / Salir</a></li>
+            <li><a href="#emergency" id="emergency" data-toggle="modal" data-target="#modalEmergency"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Emergency / Emergencia</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -92,8 +96,9 @@ Select icons provided by:
     <script src="../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="answers.js"></script>
+    <script type="text/javascript" src="{% static "visas/answers.js" %}"></script>
 
   </body>
 </html>
