revised about message

--- a/visas/templates/visas/index.html
+++ b/visas/templates/visas/index.html
@@ -70,10 +70,10 @@ Select icons provided by:
           </div>
           <div class="modal-body">
             <h4>English</h4>
-            <p>ENTREVISTA is a tool developed for The Second Step, an organization dedicated to the safety, stability, and well-being of survivors of domestic violence.</p>
+            <p>ENTREVISTA is a tool developed for REACH Beyond Domestic Violence, The Second Step and Greater Boston Legal Services organizations dedicated to the safety, stability, and well-being of survivors of domestic violence.</p>
             <br>
             <h4>Español</h4>
-            <p><span class="alt-language">Hola, ...</span></p>
+            <p><span class="alt-language">Proximamente</span></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
